Added HTML + created info.html as second page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>HOME</title>
 </head>
 <body>
-    
+
+    <header>
+        <nav>
+            <div>THE LOGO</div>
+            <ul>
+                <li>SUPPORT</li>
+                <li>LOGIN</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div>
+            <section>
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam id omnis aspernatur.</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur.</li>
+                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </section>  
+            <section>
+                <button>MAIN CTA BUTTON</button>
+                <button><a href="info.html">LEARN MORE</a></button>
+            </section>
+        </div>
+        <div>
+
+        </div>   
+    </main>
+
 </body>
 </html>
