--- a/index.html
+++ b/index.html
@@ -24,25 +24,24 @@
         </nav>
     </header>
 
-    <main>
-        <div>
-            <section>
+    <main class="p-5 md-d-flex">
+        <div class="row">
+            <section class="col-xs-2 center col-md-6">
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam id omnis aspernatur.</p>
                 <ul>
-                    <li>Lorem ipsum dolor sit amet consectetur.</li>
-                    <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li class="list-item">Lorem ipsum dolor sit amet consectetur.</li>
+                    <li class="list-item">Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
+                    <li class="list-item"> Lorem ipsum dolor sit amet.</li>
                 </ul>
-            </section>  
-            <section>
-                <button>MAIN CTA BUTTON</button>
-                <button><a href="info.html">LEARN MORE</a></button>
+                <div class="mt-5 justify-content-center">
+                    <button class="m-2 p-2 border button rounded-pill bg-danger"><a class="text-light text-decoration-none" href="#">MAIN CTA BUTTON</a></button>
+                    <button class="m-2 p-2 border rounded-pill" ><a class="text-dark text-decoration-none" href="info.html">LEARN MORE</a></button>
+                </div>
             </section>
         </div>
         <div>
-
-        </div>   
+        </div>
     </main>
     <script src="./Bootstrap/js/bootstrap.bundle.js"></script>
 
